2015-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/cpptoml.h: Sync'ed with cpptoml upstream

2015-07-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.0.4

2015-07-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/cpptoml.h: Minor update to upstream version

	* R/parseToml.R: Use utils::str() instead of str()

	* DESCRIPTION: More quoting of terms, rolled Version and Date

2015-07-09  Dirk Eddelbuettel  <edd@debian.org>

	* src/parse.cpp (collapsedList): Ensure list has content before
	iterating over it

2015-04-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.0.3

	* DESCRIPTION: More quoting of terms, rolled Version and Date, added URL

	* src/parse.cpp (local_timegm): Expand if defined() to Apple and BSDs

2015-04-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Renamed to RcppTOML, rolled Version and Date
	* NAMESPACE: Renamed to RcppTOML
	* README.md: Ditto
	* man/RcppTOML-package.Rd: Ditto
	* tests/*: Ditto

	* R/parseToml.R: Main function is parseTOML() now, keep aliases

	* README.md: Update current status, added Travis CI shield

	* man/RcppTOML-package.Rd: Expanded examples section and aliases

	* man/parseTOML.Rd: New manual page for main function

	* R/parseToml.R: Support verbose argument

	* src/parse.cpp (local_timegm): Add wrapper for timegm() using TZ
	resetting dance for OSs which do not have timegm()

2015-04-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (OS_type): Set to unix while Windows still labours
	along with a non-C++11 compiler

	* src/parse.cpp (getValue): Use timegm() as we are translating a UTC
	time into time_t, not a local time

	* tests/*.R: Simplify tests call as we no longer need explicit sorting
	* tests/*.Rout.save: Update reference output as well

	* .travis.yml: Set g++-4.9 via update-alternatives

2015-04-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Enable compile-time option to use std::map now that