@@ -2,6 +2,8 @@
 
 	* inst/include/cpptoml.h: Sync'ed with cpptoml upstream
 
+	* src/parse.cpp: Small accomodations for changed cpptoml.h
+
 2015-07-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Release 0.0.4
